# Microprocessor

./: .gitignore  CMakeLists.txt  Grade.xlsx  ash.py  design.md
lib/: addressmode.hpp  askapi.hpp  branch.hpp  branchx.hpp  cache.hpp  cpu.hpp  dataprocess.hpp  instruction.hpp  loadstore.hpp  loadstoremultiple.hpp  mrs.hpp  msr.hpp  mul.hpp  operand2.hpp  swi.hpp  types.hpp  util.hpp
src/: addressmode.cpp  branch.cpp  branchx.cpp  cache.cpp  cpu.cpp  dataprocess.cpp  instruction.cpp  kernel.cpp  loadstore.cpp  loadstoremultiple.cpp  mrs.cpp  msr.cpp  mul.cpp  operand2.cpp  swi.cpp
test/: test1.cpp  tests.s  tests.txt
test/_common/: hello.input  mersenne.input  sieve.c
test/base/: make.bat
test/base/etc/: compat.txt
test/base/inc/: libc.h
test/base/lib/: crt.s  libc.c
test/fiq/: hello_fiq.c  make.bat
test/fiq/inc/: libc.h  sys.h
test/fiq/lib/: crt.s
test/fiq/sys/: boot.s  kernel.c
test/irq/etc/: linker.ld
test/irq/inc/: libc.h  sys.h
test/irq/lib/: crt.s  libc.c
test/irq/sys/: boot.s  kernel.c
test/svc/: make.bat
test/svc/etc/: compat.txt
test/svc/inc/: libc.h  sys.h
test/svc/lib/: crt.s  libc.c
test/svc/sys/: boot.s  kernel.c
test/usr/etc/: linker.ld
test/usr/lib/: crt.s
test/usr/src/: hello.c  hello_segFault.c  quicksort_segFault.c
test/usr/sys/: boot.s
